Changed animation function. Fixed icon z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,6 @@ a:hover {
     width: 350px;
     left: 172px;
     top: 68px;
-    z-index: -1;
 }
 
 #links a {
